src/objects/Glxy_Transaction__c.object
<CustomObject>
    <customHelpPage>GLXY_HelpPage</customHelpPage>
    <description>This table contains monthly Galaxy summarized Data. This data will be loaded on monthly basis using SalesForce APEX code. Purpose of this data is to produce monthly reconciliation reports.</description>
    <fields>
        <fullName>ActualLeaseAwardDate__c</fullName>
        <inlineHelpText>The Actual Date the Lease or Lease Action was Awarded</inlineHelpText>
        <label>Actual Lease Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ActualLeaseTermCommencementDate__c</fullName>
        <inlineHelpText>The actual day the lease starts.  Either the day the government starts paying rent or the start of the free rent period at the beginning of the lease term.</inlineHelpText>
        <label>Actual Lease Term Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BA53Approver__c</fullName>
        <inlineHelpText>BA53 Analyst that acutally approves the most recent Lease Action.</inlineHelpText>
        <label>BA53 Approver</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BA53_User__c</fullName>
        <inlineHelpText>BA53 Analyst that the associated Lease is assigned to in REXUS</inlineHelpText>
        <label>BA53 User</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Count_of_Accruals__c</fullName>
        <label>Count of Accruals</label>
        <summaryFilterItems>
            <field>Glxy_LeaseDigest__c.Count_of_Accruals__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Glxy_LeaseDigest__c.Transaction__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_digests_w_Accrual__c</fullName>
        <description>count of digests where include accrual is set.</description>
        <label>Count of digests w/ Accrual</label>
        <summaryFilterItems>
            <field>Glxy_LeaseDigest__c.Include_Accrual__c</field>
            <operation>equals</operation>
            <value>YES</value>
        </summaryFilterItems>
        <summaryForeignKey>Glxy_LeaseDigest__c.Transaction__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Digest_Effective_Date__c</fullName>
        <label>Digest Effective Date</label>
        <summarizedField>Glxy_LeaseDigest__c.Digest_Effective_DT__c</summarizedField>
        <summaryForeignKey>Glxy_LeaseDigest__c.Transaction__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Digest_IA_NOA_Conversion_date__c</fullName>
        <label>Digest IA/NOA Conversion date</label>
        <summarizedField>Glxy_LeaseDigest__c.IA_NOA_Conversion_Date__c</summarizedField>
        <summaryForeignKey>Glxy_LeaseDigest__c.Transaction__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Digest_IA_Sq_Ft__c</fullName>
        <label>Digest IA Sq Ft</label>
        <summarizedField>Glxy_LeaseDigest__c.IA_RSF__c</summarizedField>
        <summaryForeignKey>Glxy_LeaseDigest__c.Transaction__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EstimatedAnnualAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The Estimated Annual Rent that appears in the &quot;Budget Info&quot; field in REXUS</inlineHelpText>
        <label>Estimated Annual Rent (Budget)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedAnnualRentFundingPayment__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The Initial Annual Rent that appears in the &quot;Budget Info&quot; field in REXUS. It sums the payment lines.</inlineHelpText>
        <label>Estimated Annual Rent (Funding Payment)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedIAAmountFundingPayment__c</fullName>
        <formula>IA_RSF_RLLUP__c * NewRatePerSqFtFunding_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated IA Amount (Funding Payment)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedIAAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EstimatedIAAmount</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EstimatedLeaseTermCommencementDate__c</fullName>
        <inlineHelpText>The estimated day the lease starts.  Either the day the government starts paying rent or the start of the free rent period at the beginning of the lease term.</inlineHelpText>
        <label>Estimated Lease Term Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EstimatedNOAAmountFundingPayment__c</fullName>
        <formula>EstimatedAnnualRentFundingPayment__c - EstimatedIAAmountFundingPayment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated NOA Amount (Funding Payment)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedNOAAmount__c</fullName>
        <formula>EstimatedAnnualAmount__c -  Estimated_IA_Amount__c</formula>
        <label>Estimated NOA Amount (Budget)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_IA_Amount__c</fullName>
        <formula>IA_RSF_RLLUP__c * RatePerSquareFoot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated IA Amount (Budget)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Lease_Award_Date__c</fullName>
        <inlineHelpText>The estimated day the lease starts.  Either the day the government starts paying rent or the start of the free rent period at the beginning of the lease term.</inlineHelpText>
        <label>Estimated Lease Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fully_Service_Lease__c</fullName>
        <label>Fully Service Lease</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Blank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IA_NOA_Conversion_Date__c</fullName>
        <label>IA/NOA Conversion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IA_RSF_RLLUP__c</fullName>
        <label>Total New IA Sq Ft</label>
        <summarizedField>Glxy_ProjectAgencyTransaction__c.IASquareFeet__c</summarizedField>
        <summaryForeignKey>Glxy_ProjectAgencyTransaction__c.TransactionID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IA_RSF__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsUserEmailMatch__c</fullName>
        <formula>IF(BA53_User__c==$User.Email, &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsUserEmailMatch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsUserRegionMatch__c</fullName>
        <formula>IF(OR(TEXT(Region__c)==$User.Glxy_Region_Code__c,$User.Glxy_Region_Code__c==&quot;CO&quot;), &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsUserRegionMatch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeaseNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Lease object</description>
        <label>Lease Number</label>
        <referenceTo>Glxy_Lease__c</referenceTo>
        <relationshipLabel>Galaxy Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lease_Action__c</fullName>
        <label>Lease Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change in Services</fullName>
                </value>
                <value>
                    <fullName>Change in SF</fullName>
                </value>
                <value>
                    <fullName>Change To External Contacts</fullName>
                </value>
                <value>
                    <fullName>Escalation</fullName>
                </value>
                <value>
                    <fullName>Expansion</fullName>
                </value>
                <value>
                    <fullName>Extension</fullName>
                </value>
                <value>
                    <fullName>Holdover</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>New/Replacing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Operating Cost Escalation</fullName>
                </value>
                <value>
                    <fullName>Real Estate Tax Escalation</fullName>
                </value>
                <value>
                    <fullName>Reduction</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Step Rent Decrease</fullName>
                </value>
                <value>
                    <fullName>Step Rent Increase</fullName>
                </value>
                <value>
                    <fullName>Succeeding</fullName>
                </value>
                <value>
                    <fullName>Superseding</fullName>
                </value>
                <value>
                    <fullName>Terminating</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lease_Agreement_RSF__c</fullName>
        <label>Lease Agreement RSF</label>
        <summarizedField>Glxy_LeaseDigest__c.Agreement_RSF__c</summarizedField>
        <summaryForeignKey>Glxy_LeaseDigest__c.Transaction__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lease_CO_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease CO Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Contact not matched to this region.</errorMessage>
            <filterItems>
                <field>$Source.Region__c</field>
                <operation>equals</operation>
                <valueField>Glxy_LeaseCoContact__c.RegionCD__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Glxy_LeaseCoContact__c</referenceTo>
        <relationshipLabel>Galaxy Transactions</relationshipLabel>
        <relationshipName>Galaxy_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lease_Term__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lease Term (In Months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NOA_RSF_RLLUP__c</fullName>
        <label>Total New NOA Sq Ft</label>
        <summarizedField>Glxy_ProjectAgencyTransaction__c.NOA_RSF__c</summarizedField>
        <summaryForeignKey>Glxy_ProjectAgencyTransaction__c.TransactionID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NOA_RSF__c</fullName>
        <formula>Lease_Agreement_RSF__c - IA_RSF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOA Sq Ft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NewRatePerSqFtFunding_Payment__c</fullName>
        <formula>IF( (IA_RSF_RLLUP__c + NOA_RSF_RLLUP__c =0),0,EstimatedAnnualRentFundingPayment__c /( IA_RSF_RLLUP__c + NOA_RSF_RLLUP__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Rate Per Sq Ft (Funding Payment)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Lease_Number__c</fullName>
        <description>New Lease Number</description>
        <inlineHelpText>LXXNNNNN - L &apos;State Code&apos; 00000. This is an eight character identifier for a specific lease. With the first character being &quot;L&quot;, the second two characters being the state code, and the final five characters being a unique set of numeric values.</inlineHelpText>
        <label>New Lease Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoImpactonBA53__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies that the Project will not impact BA53 funding.</inlineHelpText>
        <label>No BA53 Impact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OID_UserName__c</fullName>
        <formula>Lease_CO_Contact__r.OID_USER_NAME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Email address of the CO for the lease.</inlineHelpText>
        <label>OID User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Rate_Per_Sq_Ft__c</fullName>
        <formula>IF(Total_Old_RSF_RLLUP__c=0,0,Total_Old_Annual_Rent__c /Total_Old_RSF_RLLUP__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old Rate Per Sq Ft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OtherContractServicesAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Other Contract Services Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Certification_Date__c</fullName>
        <inlineHelpText>The date the pre-certification of funds for the Project was approved.</inlineHelpText>
        <label>Pre Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Location__c</fullName>
        <label>Primary Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectDescription__c</fullName>
        <label>Project Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Number</label>
        <referenceTo>Glxy_LeaseProjects__c</referenceTo>
        <relationshipLabel>Galaxy Transactions</relationshipLabel>
        <relationshipName>Galaxy_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospectus_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prospectus Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospectus_Number__c</fullName>
        <label>Prospectus Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RatePerSquareFoot__c</fullName>
        <formula>IF( (IA_RSF_RLLUP__c + NOA_RSF_RLLUP__c =0),0,EstimatedAnnualAmount__c /( IA_RSF_RLLUP__c + NOA_RSF_RLLUP__c ))</formula>
        <label>New Rate Per Sq Ft (Budget)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RealtySpecialist__c</fullName>
        <label>Realty Specialist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Record_Type_Lookup__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reject_Reason__c</fullName>
        <inlineHelpText>Reason for Rejection</inlineHelpText>
        <label>Reject Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invalid Data</fullName>
                </value>
                <value>
                    <fullName>Data Mismatch</fullName>
                </value>
                <value>
                    <fullName>Missing Documentation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rejection_Remarks__c</fullName>
        <inlineHelpText>Rejection Remarks</inlineHelpText>
        <label>Rejection Remarks</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RentEstOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies that the Project is to estimate the rent only.</inlineHelpText>
        <label>RentEst Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_CD__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Current Status of the transaction</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Approved by BA53</fullName>
                </value>
                <value>
                    <fullName>Rejected by BA53</fullName>
                </value>
                <value>
                    <fullName>Rejected by REXUS</fullName>
                </value>
                <value>
                    <fullName>Accepted by REXUS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_CD__c</fullName>
        <label>Team Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Change_in_RSF__c</fullName>
        <formula>(Total_Request_RSF__c) - Total_Old_RSF_RLLUP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Change in Sq Ft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Change_in_Structured_Parking__c</fullName>
        <label>Total Change in Structured Parking</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Change_in_Surface_Parking__c</fullName>
        <label>Total Change in Surface Parking</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_New_Annual_Rent__c</fullName>
        <label>Total New Annual Rent</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_New_RSF__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total New Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Old_Annual_Rent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Old Annual Rent</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Old_RSF_RLLUP__c</fullName>
        <description>Total Old RSF Rollup summary</description>
        <label>Total Old Sq Ft</label>
        <summarizedField>Glxy_ProjectAgencyTransaction__c.Current_RSF__c</summarizedField>
        <summaryForeignKey>Glxy_ProjectAgencyTransaction__c.TransactionID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Request_RSF__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Request Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Request_Structured_Parking__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Request Structured Parking</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Request_Surface_Parking__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Request Surface Parking</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TransactionDate__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TransactionID__c</fullName>
        <externalId>true</externalId>
        <label>Rexus Transaction ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TransactionProcessedDateFY__c</fullName>
        <formula>IF(ISNULL(DATEVALUE(TransactionProcessedDate__c)), Text(YEAR(DATEVALUE(TransactionProcessedDate__c) + 92 )), Text(YEAR(DATEVALUE(TransactionProcessedDate__c) + 92 )))</formula>
        <label>Transaction Processed Date FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransactionProcessedDate__c</fullName>
        <label>Transaction Processed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Created_By__c</fullName>
        <description>Transaction Created By from Rexus</description>
        <inlineHelpText>Transaction Created By</inlineHelpText>
        <label>Transaction Created By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USF_Variance__c</fullName>
        <inlineHelpText>USF Variance</inlineHelpText>
        <label>USF Variance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Galaxy Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>LeaseNumber__c</columns>
        <columns>Project_Number__c</columns>
        <columns>Region__c</columns>
        <columns>Status__c</columns>
        <columns>Team_CD__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_My_Regional_Transactions</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>LeaseNumber__c</columns>
        <columns>Project_Number__c</columns>
        <columns>Region__c</columns>
        <columns>Status__c</columns>
        <columns>Team_CD__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsUserRegionMatch__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected by REXUS,Pending</value>
        </filters>
        <label>All My Regional Transactions</label>
    </listViews>
    <listViews>
        <fullName>All_My_Transactions</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>LeaseNumber__c</columns>
        <columns>Project_Number__c</columns>
        <columns>Region__c</columns>
        <columns>Status__c</columns>
        <columns>Team_CD__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsUserEmailMatch__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected by REXUS,Pending</value>
        </filters>
        <label>All My Transactions</label>
    </listViews>
    <listViews>
        <fullName>My_Lease_Actions</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>LeaseNumber__c</columns>
        <columns>Region__c</columns>
        <columns>Status__c</columns>
        <columns>Team_CD__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected by REXUS,Pending</value>
        </filters>
        <filters>
            <field>IsUserEmailMatch__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Glxy_Transaction__c.Lease_Action</value>
        </filters>
        <label>My Lease Actions</label>
    </listViews>
    <listViews>
        <fullName>My_Project_Final_Certification_Requests</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Project_Number__c</columns>
        <columns>Region__c</columns>
        <columns>Status__c</columns>
        <columns>Team_CD__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected by REXUS,Pending</value>
        </filters>
        <filters>
            <field>IsUserEmailMatch__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Glxy_Transaction__c.Project_Final_Certification</value>
        </filters>
        <label>My Project Final Certification Requests</label>
    </listViews>
    <listViews>
        <fullName>My_Project_Pre_Certification_Requests</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Project_Number__c</columns>
        <columns>Region__c</columns>
        <columns>Status__c</columns>
        <columns>Team_CD__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected by REXUS,Pending</value>
        </filters>
        <filters>
            <field>IsUserEmailMatch__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Glxy_Transaction__c.Project_Pre_Certification</value>
        </filters>
        <label>My Project Pre-Certification Requests</label>
    </listViews>
    <listViews>
        <fullName>My_Regional_Lease_Actions</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>LeaseNumber__c</columns>
        <columns>Region__c</columns>
        <columns>Status__c</columns>
        <columns>Team_CD__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected by REXUS,Pending</value>
        </filters>
        <filters>
            <field>IsUserRegionMatch__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Glxy_Transaction__c.Lease_Action</value>
        </filters>
        <label>My Regional Lease Actions</label>
    </listViews>
    <listViews>
        <fullName>My_Regional_Project_Final_Certifications</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Project_Number__c</columns>
        <columns>Region__c</columns>
        <columns>Status__c</columns>
        <columns>Team_CD__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected by REXUS,Pending</value>
        </filters>
        <filters>
            <field>IsUserRegionMatch__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Glxy_Transaction__c.Project_Final_Certification</value>
        </filters>
        <label>My Regional Project Final Certifications</label>
    </listViews>
    <listViews>
        <fullName>My_Regional_Project_Pre_Certifications</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Project_Number__c</columns>
        <columns>Region__c</columns>
        <columns>Status__c</columns>
        <columns>Team_CD__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected by REXUS,Pending</value>
        </filters>
        <filters>
            <field>IsUserRegionMatch__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Glxy_Transaction__c.Project_Pre_Certification</value>
        </filters>
        <label>My Regional Project Pre-Certifications</label>
    </listViews>
    <nameField>
        <label>Transaction ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Galaxy Transactions</pluralLabel>
    <recordTypes>
        <fullName>Lease_Action</fullName>
        <active>true</active>
        <label>Lease Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Final_Certification</fullName>
        <active>true</active>
        <label>Project Final Certification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Pre_Certification</fullName>
        <active>true</active>
        <label>Project Pre-Certification</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>IA_Sq_Ft_Not_Blank_on_Date_LA</fullName>
        <active>true</active>
        <description>IA Conversion Date should be NULL when IA Sq Ft is Zero</description>
        <errorConditionFormula>AND(NOT(ISBLANK(IA_NOA_Conversion_Date__c)), OR(ISBLANK(IA_RSF__c),IA_RSF__c=0), RecordType.DeveloperName =&quot;Lease_Action&quot; )</errorConditionFormula>
        <errorMessage>IA Conversion Date should be NULL when IA Sq Ft is Zero</errorMessage>
    </validationRules>
</CustomObject>